# NextSpot

./: .gitignore  AGENTS.md  GEMINI.md  Gumi kakao restaurant.py  LOCAL_RUN.md  README.md  architecture_overview.md  docker-compose.yml  package-lock.json  package.json  render.yaml  run_local.ps1  vercel.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: config.py  logging.py  supabase.py  vector.py
apps/api/app/routers/: account.py  admin.py  coupons.py  courses.py  events.py  freshness.py  impact.py  infrastructures.py  lab.py  merchant.py  predict.py  preferences.py  recommendations.py  reports.py  restrooms.py  safety.py  search.py  tracking.py  travel_context.py  weather.py
apps/api/app/services/: briefing_service.py  coupon_service.py  embedding_service.py  event_boost.py  facility_cache.py  feedback_service.py  festival_summary_service.py  kakao_coordinate_service.py  llm_client.py  merchant_boost.py  merchant_briefing_service.py  predict_service.py  preference_nlp_service.py  preference_vector_service.py  reason_service.py  recommendation_explanation_service.py  restroom_service.py  search_rewrite_service.py  travel_context.py  travel_context_parser.py  voice_intent_service.py  weather_service.py  wikimedia.py
apps/api/scripts/: ingest_kakao_places.py  ingest_tourapi.py  ingest_tourism_insights.py  recommendation_quality.py  reconcile_kakao_coordinates.py  tag_cuisines.py  train.py  translate_overviews.py
apps/api/sql/: add_preference_note.sql
apps/api/tests/: conftest.py  test_facility_lifecycle.py  test_recommendation_quality.py  test_recommendation_source_migration.py  test_tag_cuisines.py  test_translate_overviews.py
apps/api/tests/core/: test_supabase_jwks.py  test_supabase_retry.py
apps/api/tests/fixtures/: recommendation_quality.json
apps/api/tests/routers/: test_account.py  test_admin_briefing.py  test_coupons.py  test_courses.py  test_events.py  test_festival_summary.py  test_impact.py  test_lab.py  test_merchant.py  test_merchant_briefing.py  test_predict_batch.py  test_predict_day.py  test_predict_golden_hour.py  test_routers.py  test_safety.py  test_search.py  test_voice_turn.py  (+2 more)
(+237 files in other folders)
