[tool.poetry]
name = "api"
version = "0.1.0"
description = "NextSpot — TTTV 기반 관광 수요 분산·대안 장소 추천 API 엔진"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
supabase = "^2.3.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
structlog = "^24.1.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
scikit-learn = "^1.4.0"
joblib = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
