[tool.poetry]
name = "api"
version = "0.1.0"
description = "NextSpot — SPOT 기반 관광 수요 분산·대안 장소 추천 API 엔진"
authors = ["NextSpot Team (NextSpot-knu)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
supabase = "^2.3.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
structlog = "^24.1.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
scikit-learn = "^1.4.0"
joblib = "^1.3.0"

[tool.ruff]
# CI(.github/workflows/ci.yml)가 `ruff check apps/api` 로 실행하는 린트 설정.
# 기본 규칙(E4/E7/E9 + F)만 사용 — 실수 방지용 최소 세트.
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# scripts/* 는 sys.path 부트스트랩(레포 루트 추가) 후 app.* 을 임포트해야 해서 E402 허용.
"scripts/*" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
