# NextSpot API — 도구 설정 전용 pyproject.
# 의존성 정본은 requirements.txt(런타임) + requirements-dev.txt(테스트/린트)이며 pip 로 설치한다.
# (과거 [tool.poetry] 의존성 명세는 poetry 미사용·requirements 와 드리프트로 제거 — 2026-07-10)

[tool.ruff]
# CI(.github/workflows/ci.yml)가 `ruff check apps/api` 로 실행하는 린트 설정.
# 기본 규칙(E4/E7/E9 + F)만 사용 — 실수 방지용 최소 세트.
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# scripts/* 는 sys.path 부트스트랩(레포 루트 추가) 후 app.* 을 임포트해야 해서 E402 허용.
"scripts/*" = ["E402"]
